--- a/PAT 常用模板总结/树的遍历.md
+++ b/PAT 常用模板总结/树的遍历.md
@@ -4,4 +4,4 @@
 
 （2）熟练写出树的先根遍历和层序遍历，要明白**先根遍历即DFS**，**层序遍历即BFS**，实际操作的时候多注意DFS的思路和递归参数
 
-（3）要学会DFS中运用“剪枝”，不过目前没有遇到类似的题，一般写不会超时：
+（3）要学会DFS中运用“剪枝”，不过目前没有遇到类似的题，一般写不会超时
