--- a/PAT 常用模板总结/堆.md
+++ b/PAT 常用模板总结/堆.md
@@ -8,7 +8,8 @@
 
 （2）以大顶堆为例，要在理解的基础上记忆固定模板，如下：
 
-**//向下调整（十分重要，用于建堆、删除和堆排序）**
+```
+//向下调整（十分重要，用于建堆、删除和堆排序）
 
 void downAdjust(int low, int high) {
 
@@ -62,7 +63,7 @@ void deleteTop() {
 
 }
 
-**//堆排序**
+//堆排序
 
 void heapSort() {
 
@@ -117,3 +118,4 @@ void insert(int x) {
 ​    upAdjust(1, n); //向上调整新加入的结点n
 
 }
+```
