--- a/PAT 常用模板总结/图的遍历.md
+++ b/PAT 常用模板总结/图的遍历.md
@@ -4,76 +4,78 @@
 
  若给定图为连通图，则只需要使用一次，否则需要遍历每个连通块
 
-（2）DFS：按深度优先的方式访问所有未被访问的结点，在结点被访问过后标记为已访问
+（2）DFS：按深度优先的方式访问所有未被访问的结点，在结点被访问过后标记为已访问，模板如下：
 
-​         模板如下：
-
+```c++
 DFS(u) {
 
-vis[u] = true;
+	vis[u] = true;
 
-**//如果需要对u进行一些操作，可以在这里进行**
+	//如果需要对u进行一些操作，可以在这里进行
 
-for(从u出发能到达的所有顶点v)
+	for(从u出发能到达的所有顶点v)
 
-if(vis[v] == false)
+		if(vis[v] == false)
 
-DFS(v);
+			DFS(v);
 
 }
 
 DFSTrave(G) {
 
-for(G的所有顶点u)
+	for(G的所有顶点u)
 
-​    				if(vis[u] == false)
+    	if(vis[u] == false)
 
-​      					DFS(u);
+      		DFS(u);
 
 }
-
- 
+```
 
 （3）BFS：建立一个队列，把初始顶点加入队列，然后每次都取出队首元素进行访问，把从该顶点出发可以到达的**未曾加入过队列**（而不是未访问）的顶点全部加入队列，直到队列为空，模板如下：
 
+```c++
 BFS(u) {
 
-queue q;
+	queue q;
 
-将u入队;
+	将u入队;
 
-inq[u] = true;
+	inq[u] = true;
 
-  				while(q非空) {
+  	while(q非空) {
 
-取出q的队首元素u进行访问;
+		取出q的队首元素u进行访问;
 
-q.pop();
+		q.pop();
 
-​    				for(从u出发可达的所有顶点v) {
+​    	for(从u出发可达的所有顶点v) {
 
-​      					if(inq[v] == false){
+​      		if(inq[v] == false){
 
-将v入队;
+				将v入队;
 
-inq[v] = true;
+				inq[v] = true;
 
+			}
+
+​    	}
+
+  	}
 }
-
-​    				}
-
-  				}
 
 BFSTrave(G) {
 
-  					for(G的所有顶点u) {
+	for(G的所有顶点u) {
 
-​    					if(inq[u] == false)
+​   	if(inq[u] == false)
 
-​      						bfs(u);
+​      		bfs(u);
 
-  					}
+  	}
 
 }
+
+```
 
 注意：图的遍历题比较灵活，要能快速地修改DFS和BFS模板以达到题目要求，还是多刷题多见题型多总结
