--- a/PAT 常用模板总结/图论.md
+++ b/PAT 常用模板总结/图论.md
@@ -2,8 +2,8 @@
 
 （1）图的存储方式：邻接矩阵和邻接表
 
-​                 顶点数目较大（一般个数在1000以上）时要使用邻接表
+顶点数目较大（一般个数在1000以上）时要使用邻接表
 
-​                 稀疏图用邻接表，稠密图用邻接矩阵
+稀疏图用邻接表，稠密图用邻接矩阵
 
-（2）此类题没有固定模板，而是要根据图的定义和性质，结合题意解题，因此一定要能理解图这种数据结构并熟练使用，解题时自由发挥即可
+（2）此类题没有固定模板，一般都是新概念题，而是要根据图的定义和性质，结合题意解题，因此一定要能理解图这种数据结构并熟练使用，解题时自由发挥即可（按晴神的说法，只要建个邻接矩阵或者邻接表就能解决了，不需要什么算法
