--- a/PAT 常用模板总结/排序.md
+++ b/PAT 常用模板总结/排序.md
@@ -14,23 +14,30 @@
 
 可以在结构体中把排名记录下来，也可以直接在最后遍历时输出，一般情况下处理排名的代码如下：
 
+```c++
 stu[0].r = 1;
 
 for (int i = 1; i < n; i++){
 
-if(stu[i].score == stu[i-1].score)
+	if(stu[i].score == stu[i-1].score)
 
-stu[i].r = stu[i-1].r;
+		stu[i].r = stu[i-1].r;
 
-else
+	else
 
-stu[i].r = i + 1;
+		stu[i].r = i + 1;
 
 }
+```
 
 一些技巧or注意点：处理时间进行排序比较，可以把时分秒全部转换为秒，即
 
-int time = h*3600 + m*60 + s; h = time / 3600; m = time % 3600 / 60; s = time % 60;
+```c++
+int time = h*3600 + m*60 + s;
+h = time / 3600;
+m = time % 3600 / 60;
+s = time % 60;
+```
 
 复杂题数据量大要求多时，可能需要建立多个结构体数组，并进行多次排序，进行筛选，获得有效数据后再进行处理输出；还有就是读清题意，搞清楚排序和排名条件以及输出格式；
 
