--- a/PAT 常用模板总结/字符串处理.md
+++ b/PAT 常用模板总结/字符串处理.md
@@ -8,9 +8,10 @@
 
 **① cin（遇到空格或回车结束，因此无法一次读取一整行带有空格的字符串）**
 
-\#include <cstring>
+```c++
+#include <cstring>
 
-\#include <iostream>
+#include <iostream>
 
 using namespace std;
 
@@ -21,12 +22,14 @@ cin>>s;
 cout<<s;
 
 int len = s.size();
+```
 
 **② getline（特殊的cin，但是遇到空格不结束，因此可以读取整行带有空格的字符串）**
 
-\#include <cstring>
+```c++
+#include <cstring>
 
-\#include <iostream>
+#include <iostream>
 
 using namespace std;
 
@@ -37,20 +40,23 @@ getline(cin,s);
 cout<<s;
 
 int len = s.size();
+```
 
 **③ scanf()（和cin一样遇到空格或回车结束，无法一次读取一整行带有空格的字符串）**
 
-\#include <cstdio>
+```c++
+#include <cstdio>
 
-\#include <cstring>
+#include <cstring>
 
 char s[20];
 
 scanf(“%s”,s);
 
-printf(“%s”,s); //输出乱码时可能是char数组存在map<string, >中被转化成了string，此时要在后面加 .c_str()
+printf(“%s”,s); //输出乱码时可能是char数组存在map<string, >中被转化成了string，此时要在后面加.c_str()
 
 int len = strlen(s);
+```
 
 （2）一些常用字符串函数
 
