--- a/PAT 常用模板总结/素数.md
+++ b/PAT 常用模板总结/素数.md
@@ -2,44 +2,49 @@
 
 （1）素数判断，模板如下：
 
+```c++
 bool isPrime(int n) {
 
-​    if (n <= 1)
+    if (n <= 1)
 
-​        return false; //特判
+        return false; //特判
 
-​    int sqr = (int)sqrt(1.0 * n); //根号n
+    int sqr = (int)sqrt(1.0 * n); //根号n
 
-​    //遍历2-根号n
+    //遍历2-根号n
 
-​    for (int i = 2; i <= sqr; i++) {
+    for (int i = 2; i <= sqr; i++) {
 
-​        if (n % i == 0)
+        if (n % i == 0)
 
-​            return false; //n是i的倍数，则n不是素数
+            return false; //n是i的倍数，则n不是素数
 
-​    }
+    }
 
-​    return true;
+    return true;
 
 }
+```
 
 n没有接近int上限时的简单模板：
 
+```c++
 bool isprime(int n) {
 
-​    	for (int i = 2; i * i <= n; i++)
+    	for (int i = 2; i * i <= n; i++)
 
-​        	if (n % i == 0) 
+        	if (n % i == 0) 
 
-return false;
+				return false;
 
-​    	return true;
+    	return true;
 
 }
+```
 
 （2）素数表的获取（素数筛法），模板如下：
 
+```c++
 //埃氏筛法
 
 const int maxn = 101; //以表长100为例
@@ -73,3 +78,4 @@ void Find_Prime() {
 ​    }
 
 }
+```
